board fixed overlapping categories in mobile view

--- a/board.css
+++ b/board.css
@@ -154,6 +154,7 @@ button {
     box-shadow: 0px 0px 10px 3px #00000014;
     border-radius: 24px;
     padding: 16px;
+    margin-bottom: 10px;
 }
 
 .taskCategory {
@@ -266,6 +267,7 @@ button {
     .boardContent {
         margin: 0;
         padding: 0;
+        height: auto;
     }
 
     .boardHeaderMiddle {
@@ -318,6 +320,15 @@ button {
 
     .searchContent {
         width: 100%;
+    }
+
+    .boardColumn {
+        display: flex;
+        gap: 10px;
+    }
+
+    .task {
+        width: 252px !important;
     }
 
 }
